--- a/Focus_session_1_files/Session1_Notebook.ipynb
+++ b/Focus_session_1_files/Session1_Notebook.ipynb
@@ -39,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "numPeople = 16\n",
-    "numSims = 1000\n",
+    "numPeople = \n",
+    "numSims = 100000\n",
     "\n",
     "prob = birthday_problem(numPeople,numSims)\n",
     "print(\"The probability of a room with \" + str(numPeople) + \" having at least 2 people with the same \" +\n",
@@ -63,8 +63,11 @@
    "outputs": [],
    "source": [
     "list_of_strategies = [\n",
-    "    #tbd\n",
-    "             ]\n",
+    "    #Dr. Wright's response\n",
+    "    [3,5,8,10,13,1,26,30,2,2],\n",
+    "    #student responses\n",
+    "    \n",
+    "]\n",
     "\n",
     "wins = []\n",
     "losses = []\n",
@@ -89,7 +92,7 @@
     "        if(len(kingdom1))!=10:\n",
     "            print(\"Kingdom \" + str(kingdom1_num) + \" sent troops to the wrong number of castles\")\n",
     "        if(len(kingdom2))!=10:\n",
-    "            print(\"Kingdom \" + str(kingdom1_num) + \" sent troops to the wrong number of castles\")\n",
+    "            print(\"Kingdom \" + str(kingdom2_num) + \" sent troops to the wrong number of castles\")\n",
     "        \n",
     "        k1_score = 0\n",
     "        k2_score = 0\n",
@@ -153,6 +156,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f3404a5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum([10,10,10,10,10,10,10,10,10,10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6401154",
    "metadata": {},
    "outputs": [],
    "source": []
