--- a/Focus_session_1_files/Session1_Notebook.ipynb
+++ b/Focus_session_1_files/Session1_Notebook.ipynb
@@ -57,16 +57,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "839e7231",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "K# Strategy WinPercentage\n",
+      "0 [3, 5, 8, 10, 13, 1, 26, 30, 2, 2] 0.0\n",
+      "1 [4, 6, 9, 11, 6, 2, 28, 28, 3, 3] 1.0\n",
+      "\n",
+      "Overall best strategy:\n",
+      "1 [4, 6, 9, 11, 6, 2, 28, 28, 3, 3] 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_strategies = [\n",
     "    #Dr. Wright's response\n",
     "    [3,5,8,10,13,1,26,30,2,2],\n",
     "    #student responses\n",
-    "    \n",
+    "    [4, 6, 9, 11, 6, 2, 28, 28, 3, 3]\n",
     "]\n",
     "\n",
     "wins = []\n",
@@ -154,10 +168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f3404a5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum([10,10,10,10,10,10,10,10,10,10])"
    ]
@@ -187,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
